# SparkBERT

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
benches/: vector_search_benchmark.rs
examples/: server.rs
scripts/: README.md  fix-faiss-libdir.sh
src/: api.rs  args.rs  dataset.rs  directory.rs  embs.rs  faiss.rs  indexing.rs  inverted_index.rs  lib.rs  main.rs  postings.rs  run.rs  score.rs  tf_term_query.rs  util.rs  vector_index.rs  vector_vocabulary.rs
