[package]
name = "spar-k-bert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-core = { version = "*", features = ["cuda"] }
candle-transformers = { version = "*", features = ["cuda"] }
candle-nn = { version = "*", features = ["cuda"] }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4.2"
tokenizers = { version = "0.21.1", default-features = false, features = [
  "onig",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.140"
tantivy = "0.24.0"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
rayon = { version = "*" }
faiss = { path = "../faiss-rs" }
qdrant-client = "1.14.0"
tokio = "1.44.2"
redis = "*"
indicatif = "*"
