[package]
name = "spark-bert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-core = { version = "*" }
candle-transformers = { version = "*" }
candle-nn = { version = "*" }
# clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4.2"
tokenizers = { version = "0.21.1", default-features = false, features = [
  "onig",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.140"
tantivy = "*"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
rayon = { version = "*" }
faiss = { version = "*", features = ["static"] }
tokio = "1.44.2"
indicatif = "*"
float8 = "*"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }
axum = "0.8"

[[bench]]
name = "vector_search_benchmark"
harness = false
