[package]
name = "spark-bert"
version = "0.1.0"
description = "Hybrid vector search using an inverted index and BERT embeddings"
authors = ["Viacheslav Dobrynin <w.v.dobr@gmail.com>"]
readme = "README.md"
repository = "https://github.com/viacheslav-dobrynin/SparkBERT"
keywords = [
  "sparse",
  "inverted-index",
  "bert",
  "rag",
  "vector-search",
]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-core = { version = "0.9" }
candle-transformers = { version = "0.9" }
candle-nn = { version = "0.9" }
# clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4"
tokenizers = { version = "0.21.1", default-features = false, features = [
  "onig",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tantivy = "0.25"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
rayon = { version = "1" }
faiss = { version = "0.13", features = ["static"] }
tokio = "1.44.2"
indicatif = "0.18"
float8 = "0.4"

[dev-dependencies]
criterion = { version = "0", features = ["html_reports"] }
axum = "0.8"

[[bench]]
name = "vector_search_benchmark"
harness = false
